[gd_scene load_steps=5 format=3 uid="uid://dysy0ojqquyh5"]

[ext_resource type="Script" path="res://scripts/gameplay/uppercut_handler.gd" id="1_8qa08"]
[ext_resource type="Texture2D" uid="uid://c2vsxx28ejldj" path="res://scripts/sprites/gui/uppercut1.png" id="2_8yf3x"]
[ext_resource type="Texture2D" uid="uid://fm6wqy1ou6on" path="res://scripts/sprites/gui/uppercut2.png" id="3_03l8n"]

[sub_resource type="LabelSettings" id="LabelSettings_oe183"]

[node name="uppercut_handler" type="Node2D"]
script = ExtResource("1_8qa08")

[node name="target" type="Sprite2D" parent="."]
texture = ExtResource("2_8yf3x")

[node name="marker" type="Sprite2D" parent="."]
scale = Vector2(3, 3)
texture = ExtResource("3_03l8n")

[node name="Timer" type="Timer" parent="."]

[node name="Label" type="Label" parent="."]
offset_left = -20.0
offset_top = -16.0
offset_right = 20.0
offset_bottom = 7.0
label_settings = SubResource("LabelSettings_oe183")
horizontal_alignment = 1

[node name="time_to_hide" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="time_to_hide" to="." method="_on_time_to_hide_timeout"]
